<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Enigmi</string>
    <string name="action_settings">Settings</string>
    <string name="Button1_main">Continua</string>
    <string name="Button2_main">Seleziona il livello</string>
    <string name="Button3_main">EXIT</string>
    <string name="copyright">Copyright &#169; 2014 &#10; La Marca &#38; Lucci</string>
    <string name="title_activity_select_lv">Enigmi</string>
    <string name="title_activity_continua">Enigmi</string>
    <string name="title_activity_livello0">Livello0</string>
    <string name="title_activity_livello1">Livello1</string>
    <string name="title_activity_livello2">Livello2</string>
    <string name="title_activity_livello3">Livello3</string>
    <string name="Welcome">Benvenuto in questa fantastica App che ti trascina in un mondo di mistero dove l\'unico modo per procedere sar&#224; spremere al massimo quell\'affare posto tra quelle belle orecchie che ti ritrovi!! \n\nPer superare i livelli dovrai scoprire la parola che ti permetter&#224; di accedere al livello successivo. \n\nLe regole sono semplici: \n\t 1) Osserva tutti i dettagli \n\t 2) Interagisci con il dispositivo \n\t 3) Dimostra la tua abilit&#224; </string>
    <string name="Lv1">Questo è il primo livello, per passare al LIVELLO2 dovrai capire qual\'&#233; la parola da inserire qui sotto.</string>
    <string name="Lv1_2">Troppo semplice &#33;&#63; \nAvanza che presto ti far&#242; cambiare idea &#63;&#63;&#63; </string>
    <string name="annulla">Annulla</string>
    <string name="TornaMenu">Torna al Men&#249;</string>
    <string name="Pausa">Ti arrendi?!</string>
    <string name="Fine">Sei sicuro di voler uscire&#63;</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="edit_message">Inserisci la risposta</string>
    <string name="next">Next Button&#224; premi per passare al livello successivo</string>
    <string name="Prova">Prova</string>
    <string name="help1">L\'indizio &#232; così grande che non puoi non vederlo &#63;&#63;</string>
    <string name="fuoco">Fuoco</string>
    <string name="lv2">Vuoi passare al livello 3 &#63; Spegni il fuoco velocemente</string>
    <string name="Image">Immagine di gioco</string>
    <string name="help3">Conosci il sensore di luminosit&#224;&#63;</string>
    <string name="help3_1">Men&#249;</string>
    <string name="help3_2">Visto che non hai il sensore di luminosit&#224;: LO</string>
    <string name="stop">Stop interaction</string>
    <string name="start">Start interaction</string>
    <string name="prevStop">Voui fermare una cosa mai iniziata?</string>
    <string name="ritenta">Sbagliato! Ritenta</string>
    <string name="help_LV2_3">Pi&#249; forte!!</string>
    <string name="help_LV2_2">Esagerato, vai piano</string> 
    <string name="title_activity_fine">Fine</string>
    <string name="Congratulazioni">Mi hai battuto, hai risolto tutti gli enigmi che avevo preparato per te. \n\nNon temere che mi farò presto vivo con altri fantastici Enigmi!!!</string>
	<string name="Reset">Reset</string>
	<!--
	<string name="Sol_LV1_1">LIVELLO2</string>
	<string name="Sol_LV1_2">LIVELLO 2</string>
	<string name="Sol_LV1_3">Livello2</string>
	<string name="Sol_LV1_4">Livello 2</string>
	<string name="Sol_LV1_5">livello2</string>
	<string name="Sol_LV1_6">livello 2</string>
	<string name="Sol_LV3_1">LOVE</string>
	<string name="Sol_LV3_2">love</string>
	<string name="Sol_LV3_3">Love</string>
	<string name="Sol_LV3_4">Love </string>
	<string name="Sol_LV3_5">LOVE </string>
	<string name="Sol_LV3_6">love </string>-->
	

</resources>
